fixed my horrible spacing on the about me

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -49,6 +49,8 @@ main {
     border-radius: 10px;
     display: flex;
     justify-content: space-between;
+    position: sticky;
+    top: 0;
 }
 
 .nav {
@@ -92,10 +94,10 @@ h2 {
 }
 
 .block-text-container {
-    min-width:400px;
-    width: 30%;
+    min-width: 400px;
+    width: 10%;
     color: var(--foreground);
-    padding: 0 10%;
+    padding: 0 2em;
 }
 
 a:hover {
